--- a/Intro to APIs Complete.ipynb
+++ b/Intro to APIs Complete.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "4db9d154",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "52c440c6",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "f60c1b4a",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "7b63a204",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "c6d1fdaf",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "ed4d3256",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
        "         'nationality': 'Italian'}]}]}]}}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "92e6cd2c",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
        "dict"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "f074dfcf",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
        "    'nationality': 'Italian'}]}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "d3794c75",
    "metadata": {},
    "outputs": [
@@ -963,7 +963,7 @@
        "list"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "be46a950",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "   'contructor': 'Toro Rosso'}}]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "3740c752",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1322,7 @@
        "   'contructor': 'Williams'}}]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "5a9081e3",
    "metadata": {},
    "outputs": [
@@ -1361,11 +1361,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ditto limber 101 https://pokeapi.co/api/v2/pokemon-form/132/\n",
-      "bulbasaur overgrow 64 https://pokeapi.co/api/v2/pokemon-form/1/\n",
-      "kakuna shed-skin 72 https://pokeapi.co/api/v2/pokemon-form/14/\n",
-      "rattata run-away 51 https://pokeapi.co/api/v2/pokemon-form/19/\n",
-      "raticate run-away 145 https://pokeapi.co/api/v2/pokemon-form/20/\n"
+      "ditto limber 101 https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png\n",
+      "bulbasaur overgrow 64 https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png\n",
+      "kakuna shed-skin 72 https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/14.png\n",
+      "rattata run-away 51 https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/19.png\n",
+      "raticate run-away 145 https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/20.png\n"
      ]
     }
    ],
@@ -1377,8 +1377,11 @@
     "    ability = result['abilities'][0]['ability']['name']\n",
     "    name = result['forms'][0]['name']\n",
     "    base_experience = result['base_experience']\n",
-    "    url = result['forms'][0]['url']\n",
-    "    print(name,ability, base_experience, url )\n",
+    "    sub_url = result['forms'][0]['url']\n",
+    "    sub_response = requests.get(sub_url)\n",
+    "    sub_result = sub_response.json()\n",
+    "    image = sub_result['sprites']['front_default']\n",
+    "    print(name,ability, base_experience, image )\n",
     "\n",
     "get_pokemon(\"ditto\")\n",
     "get_pokemon(\"bulbasaur\")\n",
